# Booking-service-control-development

./:  .dockerignore  .env.dev.example  .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  gunicorn_conf.py  main.py  pyproject.toml  run.sh  test.sh
backend/alembic/: env.py
backend/alembic/versions/: 01e357b26552_create_booking_table.py  a0c5196fecb6_add_fields_to_booking_table_name_.py  bed49fa68b32_create_table.py  d50d06262e5e_add_booking_status.py
backend/app/: migrations.md
backend/app/api/: __init__.py  models.py  rate_limit.py  schemas.py  services.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: booking.py
backend/app/celery_app/: main.py  tasks.py
backend/app/core/: admin.py  config.py  custom_types.py  logging.py
backend/app/db/: base.py  deps.py  helper.py
backend/scripts/: start-api.sh  start-flower.sh  start-worker.sh
backend/tests/: conftest.py
backend/tests/api/: test_booking.py
backend/tests/worker/: test_confirm_booking.py
