[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dmitriy Alexandrov", email = "newsmobileads@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.137.2",
    "greenlet>=3.5.2",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.21",
    "redis>=8.0.0",
    "sqladmin[full]>=0.27.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "celery-types==0.26.0",
    "flower>=2.0.1",
    "psycopg2-binary>=2.9.12",
    "gunicorn>=26.0.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.mypy]
python_version = "3.13"

warn_return_any = true
warn_unused_configs = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_any_generics = true
disallow_untyped_decorators = true

strict_equality = true

pretty = true
show_error_codes = true
exclude = "alembic/"

[tool.ruff]
target-version = "py313"
line-length = 88
extend-exclude = [
    "migrations",
    "alembic"
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = [
    "S101",   # если будут включены bandit-правила
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
